--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "u1145h-heme-ark",
   "displayName": "Noir Essence",
-  "description": "just a theme bro...",
-  "version": "0.4.0",
+  "description": "👋",
+  "version": "0.3.5",
   "publisher": "u1145h",
   "repository": {
     "type": "git",
